更新g1垃圾回收器